fixes for the oauth2 issues

--- a/ui/src/main/resources/application.yml
+++ b/ui/src/main/resources/application.yml
@@ -14,8 +14,10 @@ security:
     resource:
       userInfoUri: http://localhost:9999/uaa/user
 
-
 logging:
   level:
     org.springframework.security: DEBUG
     org.springframework.web: DEBUG
+
+server:
+  context-path: /ui
