--- a/authserver/src/main/resources/application.properties
+++ b/authserver/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 server.port: 9999
 server.contextPath: /uaa
 security.user.password: password
-security.sessions: if_required
-security.basic.enabled=true
+security.sessions: if-required
 security.oauth2.client.clientId: acme
 security.oauth2.client.clientSecret: acmesecret
 security.oauth2.client.authorized-grant-types: authorization_code,refresh_token,password
